--- a/assets/css/hero/hero-sm.css
+++ b/assets/css/hero/hero-sm.css
@@ -300,3 +300,7 @@
 body.page .hero.page-title.wrapper {
   margin-top: 0 !important;
 }
+
+body.page main.site-main {
+  padding-top: 0 !important;
+}
