--- a/assets/css/hero/hero-xl.css
+++ b/assets/css/hero/hero-xl.css
@@ -293,3 +293,7 @@
 body.page .hero.page-title.wrapper {
   margin-top: 0 !important;
 }
+
+body.page main.site-main {
+  padding-top: 0 !important;
+}
